--- a/programs/mtvs-token-staking/Cargo.toml
+++ b/programs/mtvs-token-staking/Cargo.toml
@@ -16,7 +16,8 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.22.1"
+anchor-lang = { version = "0.22.1", features = ["init-if-needed"]}
+spl-token-metadata = "0.0.1"
 anchor-spl = "0.22.1"
 spl-token = "3.3.0"
 solana-program = "=1.9.5"
