Complete unit test

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,3 +1,11 @@
+[test.validator]
+url = "devnet"
+
+[[test.validator.clone]]
+address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
+[[test.validator.clone]]
+address = "PwDiXFxQsGra4sFFTT8r1QWRMd4vfumiWC1jfWNfdYT"
+
 [features]
 seeds = false
 
