--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "@project-serum/anchor": "^0.22.1",
         "@solana/spl-token": "^0.2.0",
+        "chai-as-promised": "^7.1.1",
         "prettier": "^2.6.1"
     },
     "devDependencies": {
