--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
         "@project-serum/anchor": "^0.22.1",
         "@solana/spl-token": "^0.2.0",
         "chai-as-promised": "^7.1.1",
-        "prettier": "^2.6.1"
+        "prettier": "^2.6.1",
+        "ts-node": "^10.7.0"
     },
     "devDependencies": {
         "@types/chai": "^4.3.0",
@@ -11,7 +12,7 @@
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
         "ts-mocha": "^8.0.0",
-        "typescript": "^4.3.5"
+        "typescript": "^4.6.3"
     },
     "scripts": {
         "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
